--- a/math_iface/Makefile
+++ b/math_iface/Makefile
@@ -1,10 +1,8 @@
 math.a: gen/math.o
 	ar rcs $@ $^
 
-gen: 
-	mkdir gen
-
-gen/print_sigs: gen
+gen/print_sigs:
+	mkdir -p gen
 	cd ../stan2; make print_sigs; mv print_sigs ../math_iface/gen/print_sigs
 
 .DELETE_ON_ERROR: gen/sigs.txt gen/filtered_sigs.txt gen/math.cpp
